--- a/notes/c#/0013.html
+++ b/notes/c#/0013.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -33,27 +34,30 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 变量的类型.cs</h1>
+        <h1 class="code">13 异常捕获.cs</h1>
         <pre>
             <code class="code">
 ﻿class Program
 {
     static void Main(string[] args)
     {
-        //变量类型 变量名;
-        //变量名 = 值;
-        //100
-
-        int number;
-        number = 100;
-
-        int n = 100;
-
-        string zsName = "张三";
-
-        char c = 'a';
-
-        decimal money = 5000m;
+        int num = 0;
+        bool b = true;
+        Console.WriteLine("请输入一个数字");
+        try
+        {
+            num = Convert.ToInt32(Console.ReadLine());
+        }
+        catch
+        {
+            Console.WriteLine("输入的内容不能转换为数字");
+            b = false;
+        }
+        if(b)
+        {
+            Console.WriteLine(num * 2);
+        }
+        Console.ReadKey();
     }
 }
             </code>
