--- a/notes/c#/0020.html
+++ b/notes/c#/0020.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -33,27 +34,24 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 变量的类型.cs</h1>
+        <h1 class="code">20 类型转换方法.cs</h1>
         <pre>
             <code class="code">
 ﻿class Program
 {
     static void Main(string[] args)
     {
-        //变量类型 变量名;
-        //变量名 = 值;
-        //100
+        //使用Convert进行转换，失败了抛出异常
+        int numberOne = Convert.ToInt32("123");
 
-        int number;
-        number = 100;
+        int number = int.Parse("123");
+        Console.WriteLine(number);
+        Console.ReadKey();
 
-        int n = 100;
-
-        string zsName = "张三";
-
-        char c = 'a';
-
-        decimal money = 5000m;
+        bool b = int.TryParse("123", out number);
+        Console.WriteLine(b);
+        Console.WriteLine(number);
+        Console.ReadKey();
     }
 }
             </code>
