--- a/notes/c#/0022.html
+++ b/notes/c#/0022.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -33,27 +34,22 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 变量的类型.cs</h1>
+        <h1 class="code">22 常量.cs</h1>
         <pre>
             <code class="code">
 ﻿class Program
 {
     static void Main(string[] args)
     {
-        //变量类型 变量名;
-        //变量名 = 值;
-        //100
+        int number = 10;  //变量
+        number = 20;  //体现了变量可以被重新赋值
 
-        int number;
-        number = 100;
+        const int numberTwo = 20;  //常量
+        //number Two = 50;  //不能被重新赋值
 
-        int n = 100;
-
-        string zsName = "张三";
-
-        char c = 'a';
-
-        decimal money = 5000m;
+        Console.WriteLine(number);
+        Console.WriteLine(numberTwo);
+        Console.ReadKey();
     }
 }
             </code>
