--- a/notes/c#/0032.html
+++ b/notes/c#/0032.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -33,27 +34,45 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 变量的类型.cs</h1>
+        <h1 class="code">32 params可变参数.cs</h1>
         <pre>
             <code class="code">
 ﻿class Program
 {
     static void Main(string[] args)
     {
-        //变量类型 变量名;
-        //变量名 = 值;
-        //100
+        //params可变参数
+        //参数列表只能有一个params
+        //params对于非数组没有意义
+        //params参数必须是参数列表中的最后一个元素
+        //int[] s = { 99, 88, 77 };
+        Test("张三", 99, 88, 77, 66, 55);
+        Console.ReadKey();
 
-        int number;
-        number = 100;
+        //int[] nums = { 1, 2, 3, 4, 5 };
+        int sum = GetSum(1, 2, 3, 4, 5, 6 ,7, 8, 9);
+        Console.WriteLine(sum);
+        Console.ReadKey();
+    }
 
-        int n = 100;
+    public static void Test(string name, params int[] score)
+    {
+        int sum = 0;
+        for(int i = 0; i &lt; score.Length; i++)
+        {
+            sum += score[i];
+        }
+        Console.WriteLine("{0}这次考试的总成绩是{1}", name, sum);
+    }
 
-        string zsName = "张三";
-
-        char c = 'a';
-
-        decimal money = 5000m;
+    public static int GetSum(params int[] n)
+    {
+        int sum = 0;
+        for(int i = 0; i &lt; n.Length; i++)
+        {
+            sum += n[i];
+        }
+        return sum;
     }
 }
             </code>
