--- a/notes/c#/0033.html
+++ b/notes/c#/0033.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zn-CH">
 <head>
@@ -33,28 +34,40 @@
         </div>
         <hr>
         <!-- 正文 -->
-        <h1 class="code">01 变量的类型.cs</h1>
+        <h1 class="code">33 方法的重载.cs</h1>
         <pre>
             <code class="code">
 ﻿class Program
 {
     static void Main(string[] args)
     {
-        //变量类型 变量名;
-        //变量名 = 值;
-        //100
-
-        int number;
-        number = 100;
-
-        int n = 100;
-
-        string zsName = "张三";
-
-        char c = 'a';
-
-        decimal money = 5000m;
+        //方法重载和返回值类型没有关系
+        int i = M(1, 2);
+        double d = M(1.1, 2.2);
+        Console.WriteLine(i);
+        Console.WriteLine(d);
+        Console.ReadKey();
     }
+
+    public static int M(int n1, int n2)
+    {
+        return n1 + n2;
+    }
+
+    public static double M(double d1, double d2)
+    {
+        return d1 + d2;
+    }
+
+    //public static int M1(int n1, int n2)
+    //{
+    //    return n1 + n2;
+    //}
+
+    //public static double M2(double d1, double d2)
+    //{
+    //    return d1 + d2;
+    //}
 }
             </code>
         </pre>
