--- a/notes/c#.html
+++ b/notes/c#.html
@@ -110,6 +110,52 @@
                     <li><a href="c#/0035.html" class="content" target="_blank"> 35 飞行棋.cs</a></li>
                 </ul>
             </li>
+            <li>
+                <text style="font-size: 30px;">面向对象</text>
+                <ul>
+                    <li><a href="c#/0036.html" class="content" target="_blank"> 01 类的基本语法.cs</a></li>
+                    <li><a href="c#/0037.html" class="content" target="_blank"> 02 属性.cs</a></li>
+                    <li><a href="c#/0038.html" class="content" target="_blank"> 03 静态和非静态.cs</a></li>
+                    <li><a href="c#/0039.html" class="content" target="_blank"> 04 构造函数.cs</a></li>
+                    <li><a href="c#/0040.html" class="content" target="_blank"> 05 this关键字.cs</a></li>
+                    <li><a href="c#/0041.html" class="content" target="_blank"> 06 析构函数.cs</a></li>
+                    <li><a href="c#/0042.html" class="content" target="_blank"> 07 命名空间.cs</a></li>
+                    <li><a href="c#/0043.html" class="content" target="_blank"> 08 值类型和引用类型.cs</a></li>
+                    <li><a href="c#/0044.html" class="content" target="_blank"> 09 字符串的不变性.cs</a></li>
+                    <li><a href="c#/0045.html" class="content" target="_blank"> 10 字符串的方法一.cs</a></li>
+                    <li><a href="c#/0046.html" class="content" target="_blank"> 11 字符串的方法二.cs</a></li>
+                    <li><a href="c#/0047.html" class="content" target="_blank"> 12 继承.cs</a></li>
+                    <li><a href="c#/0048.html" class="content" target="_blank"> 13 new隐藏父类成员.cs</a></li>
+                    <li><a href="c#/0049.html" class="content" target="_blank"> 14 里氏转换.cs</a></li>
+                    <li><a href="c#/0050.html" class="content" target="_blank"> 15 随机整数.cs</a></li>
+                    <li><a href="c#/0051.html" class="content" target="_blank"> 16 ArrayList集合.cs</a></li>
+                    <li><a href="c#/0052.html" class="content" target="_blank"> 17 集合的长度问题.cs</a></li>
+                    <li><a href="c#/0053.html" class="content" target="_blank"> 18 Hashtable集合.cs</a></li>
+                    <li><a href="c#/0054.html" class="content" target="_blank"> 19 Path静态类.cs</a></li>
+                    <li><a href="c#/0055.html" class="content" target="_blank"> 19 简繁转换.cs</a></li>
+                    <li><a href="c#/0056.html" class="content" target="_blank"> 20 File静态类.cs</a></li>
+                    <li><a href="c#/0057.html" class="content" target="_blank"> 21 文件的读写.cs</a></li>
+                    <li><a href="c#/0058.html" class="content" target="_blank"> 22 List泛型集合.cs</a></li>
+                    <li><a href="c#/0059.html" class="content" target="_blank"> 23 装箱和拆箱.cs</a></li>
+                    <li><a href="c#/0060.html" class="content" target="_blank"> 24 字典泛型集合.cs</a></li>
+                    <li><a href="c#/0061.html" class="content" target="_blank"> 25 文件流读写文件.cs</a></li>
+                    <li><a href="c#/0062.html" class="content" target="_blank"> 26 大文件的复制.cs</a></li>
+                    <li><a href="c#/0063.html" class="content" target="_blank"> 26 流读写文件.cs</a></li>
+                    <li><a href="c#/0064.html" class="content" target="_blank"> 27 多态.cs</a></li>
+                    <li><a href="c#/0065.html" class="content" target="_blank"> 28 抽象类.cs</a></li>
+                    <li><a href="c#/0066.html" class="content" target="_blank"> 29 访问权限修饰符.cs</a></li>
+                    <li><a href="c#/0067.html" class="content" target="_blank"> 30 简单工厂设计模式.cs</a></li>
+                    <li><a href="c#/0068.html" class="content" target="_blank"> 31 值传递和引用传递.cs</a></li>
+                    <li><a href="c#/0069.html" class="content" target="_blank"> 32 序列化和反序列化.cs</a></li>
+                    <li><a href="c#/0070.html" class="content" target="_blank"> 33 部分类.cs</a></li>
+                    <li><a href="c#/0071.html" class="content" target="_blank"> 34 密封类.cs</a></li>
+                    <li><a href="c#/0072.html" class="content" target="_blank"> 35 重写ToString.cs</a></li>
+                    <li><a href="c#/0073.html" class="content" target="_blank"> 36 接口简介.cs</a></li>
+                    <li><a href="c#/0074.html" class="content" target="_blank"> 37 接口的特点.cs</a></li>
+                    <li><a href="c#/0075.html" class="content" target="_blank"> 38 显式实现接口.cs</a></li>
+                    <li><a href="c#/0076.html" class="content" target="_blank"> 39 MD5加密.cs</a></li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
