--- a/notes/content.html
+++ b/notes/content.html
@@ -123,11 +123,17 @@
         <div class="line">
             <h1 class="btn" onclick='window.open("cpp.html")'><a>C++笔记</a></h1>
         </div>
+        <br>
         <div class="line">
             <h1 class="btn" onclick='window.open("python.html")'>Python笔记</h1>
         </div>
+        <br>
         <div class="line">
             <h1 class="btn" onclick='window.open("java.html")'>Java笔记</h1>
+        </div>
+        <br>
+        <div class="line">
+            <h1 class="btn" onclick='window.open("csharp.html")'>C#笔记</h1>
         </div>
     </body>
 </html>
